[tool.poetry]
name = "news_gen"
version = "0.1.0"
description = "news-gen using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.51.0" }

[tool.poetry.scripts]
news_gen = "news_gen.main:run"
run_crew = "main:run"
train = "news_gen.main:train"
replay = "news_gen.main:replay"
test = "news_gen.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
